# classic_game_template

./: README.md
assets/engine/shaders/dx11/: sprites.hlsl
assets/examples/maps/: level_00.tmx  level_01.tmx  level_02.tmx  level_03.tmx  level_04.tmx  sample_iso.tmx  sample_iso.tsx
src/engine/: CMakeLists.txt  assets.cpp  assets.h  external_libs.h  system.h  tilemap.cpp  tilemap.h
src/engine/render/dx11/: pch.h
src/examples/basic/: BasicPlayer.cpp  BasicPlayer.h  CMakeLists.txt  CommandQueue.cpp  CommandQueue.h  PoorsManStateMachine.h  basic.cpp  game_grid.cpp  game_grid.h  game_level.cpp  game_level.h  game_tile.cpp  game_tile.h  pch.h  tileset.cpp  tileset.h  utils.h
src/examples/basic/Interface/: CommandsUI.cpp  CommandsUI.h
src/render_core/: camera_simple_ortho.cpp  camera_simple_ortho.h  i_render_context.h
src/render_dx11/: render_context_dx11.cpp  render_context_dx11.h
